remplacer nom dans titre

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Titre de la page -->
-    <title>Steve Fallet | Mon 1er code</title>
+    <title>Arsene Brosy | Mon 1er code</title>
 
     <!-- Auteur -->
     <meta name="author" content="Laure Dinateur">
