remplacer nom dans auteur

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Titre de la page -->
-    <title>Arsene Brosy | Mon 1er code</title>
+    <title>Arsène Brosy | Mon 1er code</title>
 
     <!-- Auteur -->
-    <meta name="author" content="Laure Dinateur">
+    <meta name="author" content="Arsene Brosy">
 
     <!-- Favicons : icône de la page dans plusieurs tailles et formats -->
     <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
@@ -20,7 +20,7 @@
     <link rel="manifest" href="./site.webmanifest">
 </head>
 <body>
-<h1>Titre de la page</h1>
-<p>Mon premier &lt;code&gt;</p>
+    <h1>Titre de la page</h1>
+    <p>Mon premier &lt;code&gt;</p>
 </body>
 </html>
