--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./icons/favicon-16x16.png">
     <link rel="manifest" href="./icons/site.webmanifest">
+
+    <!-- Styles CSS -->
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
     <h1>Titre de la page</h1>
